@@ -1,3 +1,7 @@
+2008-12-04  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gcc.dg/union-5.c: New test.
+
 2008-12-04  Jason Merrill  <jason@redhat.com>
 
 	PR c++/37906
